--- a/Latex-FinalProject/references.bib
+++ b/Latex-FinalProject/references.bib
@@ -85,6 +85,23 @@
 	publisher={ISO 31000:2018(E)}
 }
 
+@book{daemen2002design,
+	title={The design of Rijndael},
+	author={Daemen, Joan and Rijmen, Vincent},
+	volume={2},
+	year={2002},
+	publisher={Springer}
+}
+
+@article{tuli2013review,
+	title={A Review on Various Security Issues and Threats in E-Commerce},
+	author={Tuli, S. and Gera, R.},
+	journal={International Journal of Computer Science and Mobile Computing},
+	volume={2},
+	number={6},
+	pages={22--28},
+	year={2013}
+}
 Project Management Institute. (2017). A guide to the project management body of knowledge (PMBOK guide). Newtown Square, PA: Project Management Institute.
 
 
