--- a/Latex-FinalProject/document.tex
+++ b/Latex-FinalProject/document.tex
@@ -370,7 +370,7 @@
 							\rowcolor{lightgray}
 						 	\textbf{service Name} & \textbf{Number of services} & \textbf{Cost per one} & \textbf{Total cost} & \textbf{links}\\
 						 	\hline
-						 	Windows 11 pro & 3 & 29.99\$ & 89.97\$ & \href{https://instantlegit.com/product/microsoft-windows-11-professional-win-11-pro-license-code-key-original-new/}{microsoft}\\
+						 	3 & 3 & 29.99\$ & 89.97\$ & \href{https://instantlegit.com/product/microsoft-windows-11-professional-win-11-pro-license-code-key-original-new/}{microsoft}\\
 						 	\hline
 						 	VS Code & 3 & Free & Free & \href{https://code.visualstudio.com/}{VSCode} \\
 						 	\hline
@@ -382,9 +382,19 @@
 						 	\hline
 						 	Compiler MIKTex , Editor TeXstudio & 3 & Free & Free &\href{http://www.miktex.com/}{MikTex}, \href{https://www.texstudio.org/}{Texstudio}\\
 						 	\hline
-						 	MS Office  2019 & 3 & 18.34\$ & 55.02\$ & \href{https://www.microsoft.com/en-us/}{microsoft} \\
+						 	MS Office 365 & 3 & 18.34\$ & 55.02\$ & \href{https://www.microsoft.com/en-us/}{microsoft} \\
 						 	\hline
 						 	EdrawMax & 3 & 69\$ & 207\$ & \href{https://www.edrawsoft.com/pricing-edrawmax.html}{edrawsoft}\\
+						 	\hline
+						 	Pages & 3 & Free & Free & \href{https://www.apple.com/pages/}{pages}\\
+						 	\hline
+						 	GitHub & 3 & Free & Free & \href{https://github.com/}{github}\\
+						 	\hline
+						 	WhatsApp & 3 & Free & Free & \href{https://web.whatsapp.com/}{whatsapp}\\
+						 	\hline
+						 	Xcode & 3 & Free & Free & \href{https://developer.apple.com/xcode/}{Xcode}\\
+						 	\hline
+						 	Adobe Photoshop & 3 & 20\$ & 60\$ & \href{https://commerce.adobe.com/store/email?cli=adobe_com&co=IL&ctx=fp&items%5B0%5D%5Bid%5D=30404A88D89A328584307175B8B27616&lang=en}{photo}\\
 						 	\hline
 						\end{tabular}
 					\end{subtable}
