--- a/Latex-FinalProject/document.tex
+++ b/Latex-FinalProject/document.tex
@@ -1052,6 +1052,38 @@
 			
 			
 			\end{itemize}
+		\newpage
+			\begin{table}[!h]
+			\centering
+			\caption{Unit System plan}
+			\begin{tabular}{|p{1cm}|p{2cm}|p{2.3cm}|p{6cm}|p{3cm}|}
+				\hline
+				\rowcolor{lightgray}
+				\textbf{Test ID} & \textbf{Button} &\textbf{Test Objective} & \textbf{Test Description} & \textbf{Expected Result} \\
+				\hline
+				\cellcolor{lightgray}\textbf{1} & Add Patient Button & Functionality - Add Patient &  Test the ability of the "Add Patient" button to add a new patient to the app & Patient information is successfully added  \\
+				\hline
+				\cellcolor{lightgray}\textbf{2} & View Patient Button & Functionality - View Patient & Test the ability of the "View Patient" button to display patient details & Patient details are displayed correctly\\
+				\hline
+				\cellcolor{lightgray}\textbf{3} & Update Patient Button & Functionality - Update Patient & Test the ability of the "Update Patient" button to update patient information & Patient information is successfully updated \\
+				\hline
+				\cellcolor{lightgray}\textbf{4} & Delete Patient Button & Functionality - Delete Patient & Test the ability of the "Delete Patient" button to remove a patient from the app & Patient information is successfully deleted \\
+				\hline
+				\cellcolor{lightgray}\textbf{5} & Save Button & Functionality - Save Data & Test the ability of the "Save" button to save data or changes made in the app & Data or changes are successfully saved \\
+				\hline
+				\cellcolor{lightgray}\textbf{6} & Cancel Button & Functionality - Cancel Operation & Test the ability of the "Cancel" button to cancel or discard an ongoing operation & Operation is canceled or discarded as expected\\
+				\hline
+				\cellcolor{lightgray}\textbf{7} & Submit Button & Functionality - Submit Form & Test the ability of the "Submit" button to submit a form or request in the app & Form or request is successfully submitted\\
+				\hline
+				\cellcolor{lightgray}\textbf{8} & Back Button & Navigation - Go Back & Test the ability of the "Back" button to navigate to the previous screen or page & Navigates to the previous screen as expected\\
+				\hline
+				\cellcolor{lightgray}\textbf{9} & Next Button & Navigation - Go Forward & Test the ability of the "Next" button to navigate to the next screen or page & Navigates to the next screen as expected\\
+				\hline
+				\cellcolor{lightgray}\textbf{10} & Confirm Button & Functionality - Confirm Action & Test the ability of the "Confirm" button to confirm or finalize an action or operation & Action or operation is confirmed as expected \\
+				\hline
+			\end{tabular}
+		\end{table}
+		\newpage
 			\subsection{System Integration}
 			\quad System integrity for a patient tracker app refers to the ability of the app to maintain the confidentiality, availability, and accuracy of patient data. This includes ensuring that the app is secure and that only authorized users have access to patient data. It also involves implementing measures to prevent data loss, data corruption, and unauthorized modification of data. In addition, the app must be designed to function reliably and with high availability so that patient data can be accessed and used as needed. Overall, system integrity is critical for patient tracker apps to ensure that patient data is protected and that the app functions effectively to support patient care.\\
 			
@@ -1059,10 +1091,44 @@
 			\subsection{System Testing Result}
 			
 			\quad The system testing result for a patient tracker app that has undergone both automated and manual testing, with a focus on maintaining data integrity, would likely be a more robust and reliable application. The combination of automated and manual testing can provide a more comprehensive approach to identifying and addressing potential issues or bugs, as well as ensuring that the app meets the requirements and needs of its users. Additionally, maintaining data integrity is crucial for a patient tracker app, as it involves sensitive and confidential information. By using both automated and manual testing, the app's functionality and data security can be thoroughly evaluated and improved. Ultimately, this can result in an app that is more trustworthy and effective in tracking patient health and wellness.
+			\newpage
+			
+				\begin{table}[!h]
+				\centering
+				\caption{System testting plan}
+				\begin{tabular}{|p{1cm}|p{4cm}|p{4cm}|p{4cm}|}
+					\hline
+					\rowcolor{lightgray}
+					\textbf{Test ID} & \textbf{Test Objective} &\textbf{Test Description} & \textbf{Expected Result} \\
+					\hline
+					\cellcolor{lightgray}\textbf{1} & Functionality - Add Patient & Verify the ability to add a new patient to the app & Patient information is successfully added\\
+					\hline
+					\cellcolor{lightgray}\textbf{2} & Functionality - View Patient & Verify the ability to view patient details & Patient details are displayed correctly\\
+					\hline
+					\cellcolor{lightgray}\textbf{3} & Functionality - Update Patient & Verify the ability to update patient information & Patient information is successfully updated \\
+					\hline
+					\cellcolor{lightgray}\textbf{4} & Functionality - Delete Patient & Verify the ability to delete a patient from the app & Patient information is successfully deleted \\
+					\hline
+					\cellcolor{lightgray}\textbf{5} & Usability - Navigation and User Interface & Evaluate the ease of navigation and user interface & Intuitive navigation and user-friendly interface \\
+					\hline
+					\cellcolor{lightgray}\textbf{6} & Reliability - Data Storage and Retrieval & Test the reliability of storing and retrieving patient data & Patient data is stored and retrieved accurately\\
+					\hline
+					\cellcolor{lightgray}\textbf{7} & Performance - App Responsiveness & Measure the responsiveness and performance of the app & App responds quickly to user actions\\
+					\hline
+					\cellcolor{lightgray}\textbf{8} & Security - Data Protection & Assess the security measures for protecting patient datar & Patient data is encrypted and secure\\
+					\hline
+					\cellcolor{lightgray}\textbf{9} & Compatibility - Device and OS Compatibility & Verify compatibility with different devices and operating systems & App functions correctly on various devices and OS\\
+					\hline
+					\cellcolor{lightgray}\textbf{10} & Error Handling - Exception Handling & Evaluate the app's ability to handle exceptions and errors & App gracefully handles errors and exceptions\\
+					\hline
+				\end{tabular}
+			\end{table}
+		\newpage
 			\subsection{Summary}
 			
 			\quad Automated testing can quickly and efficiently identify issues in patient tracker apps, while manual testing allows for a more thorough examination of user experience. The combination of both testing methods can provide comprehensive results and help ensure the integrity of the app's data. Security measures, such as encryption and secure data storage, are also important for maintaining data integrity.
 			
+			\newpage
 			\section*{\begin{center}
 					Chapter Seven
 			\end{center}}
@@ -1105,12 +1171,7 @@
 			healthcare management, there are several areas of future work that will enhance its
 			functionality and expand its reach.
 			\begin{itemize}
-			\item  Security and Validation: As patient data security and privacy continue to be
-			paramount concerns, ongoing efforts will focus on strengthening the app's security
-			measures. This includes implementing robust encryption protocols, ensuring secure
-			data storage and transmission, and conducting regular security audits. Additionally,
-			continuous validation of the app's data inputs and outputs will be essential to
-			maintain data integrity and prevent any vulnerabilities or unauthorized access.
+			
 			\item Full Testing and Quality Assurance: Although the app has undergone extensive
 			testing, continuous testing, and quality assurance will remain a crucial aspect of its
 			development. This includes performing comprehensive end-to-end testing, stress
