--- a/Latex-FinalProject/document.tex
+++ b/Latex-FinalProject/document.tex
@@ -164,7 +164,7 @@
 			\textbf{\underline{The included functions of this system: }}\\
 			\begin{itemize}
 				\item This system depends on or works on hosting services for the medical sector, patients, and their families that suffer, such as tracking and locating the patient's current place, viewing the patient’s illness record, checking his bumps and oxygen, sending notifications and alarming,  etc. 
-				\item As it will allow patients with their families to access the app, So first they must register to create a personal account that will be informed by the medical ministry to insure that they are allowed to use this app and the sensitive information or not, it will be registering an ID number, first name, last name, date of birth, gender, place of birth, email, password, personal phone number, their location or their place of residence, two of patient’s relative name and contact information to keep them in touch, that information are all required to fill in their registration form, this system will allow changing or updating some information such as phone number and place of residence. 
+				\item As it will allow patients with their families to access the app, So first they must register to create a personal account that will be informed by the HealthCare Center to insure that they are allowed to use this app and the sensitive information or not, it will be registering an ID number, first name, last name, date of birth, gender, place of birth, email, password, personal phone number, their location or their place of residence, two of patient’s relative name and contact information to keep them in touch, that information are all required to fill in their registration form, this system will allow changing or updating some information such as phone number and place of residence. 
 				\item After all, they will officially have a personal account on our application, where the citizen will log in with the ID number and password, and then allow the user to visit the registry, and check the sites and biometrics. 
 				This application will be available 24 hours, all the time, in case the patient lost network connection then his last location will be saved and an alert will be sent to the family member  with the last location where he was.
 			\end{itemize}
@@ -370,7 +370,7 @@
 							\rowcolor{lightgray}
 						 	\textbf{service Name} & \textbf{Number of services} & \textbf{Cost per one} & \textbf{Total cost} & \textbf{links}\\
 						 	\hline
-						 	3 & 3 & 29.99\$ & 89.97\$ & \href{https://instantlegit.com/product/microsoft-windows-11-professional-win-11-pro-license-code-key-original-new/}{microsoft}\\
+						 	Windows 11 pro& 3 & 29.99\$ & 89.97\$ & \href{https://instantlegit.com/product/microsoft-windows-11-professional-win-11-pro-license-code-key-original-new/}{microsoft}\\
 						 	\hline
 						 	VS Code & 3 & Free & Free & \href{https://code.visualstudio.com/}{VSCode} \\
 						 	\hline
@@ -658,7 +658,7 @@
 			\end{figure}
 			\begin{figure}[!h]
 				\centering
-				\includegraphics[width=\textwidth]{context-diagram.jpg}
+				\includegraphics[width=\textwidth]{context-diagram.png}
 				\caption{Context Diagram}
 				\label{Context Diagram}
 			\end{figure}
@@ -681,9 +681,9 @@
 						\rowcolor{lightgray}
 						\textbf{Actor} & \textbf{Doctor, Family member} \\
 						\hline
-						\textbf{Description} & The family members and doctors can see the medical records of the patient \\
+						\textbf{Description} & The HealthCare Center can create account for users, and doctors can see the medical records of the patient \\
 						\hline
-						\textbf{Preconditions} & The family member allows the doctor to see their patient records by the patient ID number \\
+						\textbf{Preconditions} & The HealthCare Center allows the doctor to see their patient records by the patient ID number \\
 						\hline
 						\textbf{Basic processes} & The family members and doctors can follow-up of the patient's health condition and send alerts of any of them see any danger of patients life \\
 						\hline
@@ -703,7 +703,7 @@
 						\hline
 						\textbf{Description} & Patient Can See His Health Record but He Can't Edit the Record , Only The Doctor Can (Add,Delete,Edit) His Record \\
 						\hline
-						\textbf{Preconditions} & The Family Member Allows the Doctor to See Their Patient Records by The Patient ID Number After taking the patient's opinion \\
+						\textbf{Preconditions} & The HealthCare Center Allows the Doctor to See Their Patient Records by The Patient ID Number After taking the patient's opinion \\
 						\hline
 						\textbf{Basic Processes} & Patient Send Alert And Open An Emergency Call If There is Any Danger On His Life And His Health , Also His Family And Doctor Track His Location And See His Health Status \\
 						\hline
@@ -837,16 +837,16 @@
 			\textbf{Activity Diagrams :}
 			\begin{figure}[!h]
 				\centering
-				\includegraphics[width=0.8\textwidth]{Activity.png}
+				\includegraphics[width=0.8\textwidth]{Activity.jpg}
 				\caption{Activity Diagrams}
 				\label{Activity Diagrams}
 			\end{figure}
 			\subsection{Input/ Output Design}
 			\textbf{Input :}
 			\begin{itemize}
-				\item User login credentials (username, password, or fingerprint).
+				\item User login credentials (username, password).
 				\item User registration information (name, email, password, city, gender, etc.).
-				\item User's health status information (symptoms, vital signs(?), test results, etc.).
+				\item User's health status information (symptoms, vital signs(Blood presure, Oxygen saturation, Blood gloucose level, Heart rate and Insulin level), test results, etc.).
 				\item User's location information (GPS coordinates).
 				\item User's personal information (name, date of birth, etc.).
 				\item User's medical history (past illnesses, medications, allergies, etc.).
@@ -1189,6 +1189,7 @@
 			additional features such as medication reminders, instructions on first aid,
 			appointment scheduling, integration with wearable devices, and telemedicine
 			capabilities, among others.
+			\item Adding the Arabic language to the application, as well as the ability to control the font size and themes.
 			\end{itemize}
 			
 			By addressing these areas of future work, the patient tracker app will continue to evolve
